# Bubble0.5

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  default_imgui.ini  main.cpp  scene_test.json
BubbleCMake/: CMakeLists.txt
BubbleCMake/Bubble/: CMakeLists.txt  imgui.ini
BubbleCMake/Bubble/src/engine/: engine.h  entry_point.h
BubbleCMake/dependencies/SDL2/lib/: libSDL2-2.0.dylib
BubbleCMake/dependencies/imgui/: imgui_impl_sdl.cpp
BubbleCMake/src/engine/log/: log.cpp
BubbleCMake/src/pch/: pch.h
dependencies/imgui/: CMakeLists.txt
editor/: CMakeLists.txt  editor.cpp  editor_app.cpp
editor/editor_app/: CMakeLists.txt
editor/editor_app/resources/medival_house/: medieval-house-2.mtl
editor/editor_app/resources/shaders/: phong.glsl  skysphere.glsl
editor/editor_app/src/: editor_app.cpp  editor_layer.cpp  editor_layer.h  imgui_control.h  serialization.cpp  serialization.h  ui_loader.cpp  ui_loader.h
editor/editor_common/: imgui_control.h  project_serialization.h  scene_camera.h  ui_args.h
editor/editor_common/draw_tools/: draw_boundingbox.cpp  draw_boundingbox.h  draw_selected_entity.cpp  draw_selected_entity.h
editor/editor_layer/: editor_layer.cpp  editor_layer.h
editor/editor_lib/: scene_camera.h  ui_args.h  viewport.h
editor/editor_ui/: CMakeLists.txt  api.cpp
editor/editor_ui/menu/: renderer_options.h
editor/editor_ui/src/: api.cpp  imgui_control.cpp  imgui_control.h  ui.cpp  ui.h  ui_module.cpp  ui_module.h  ui_serialization.h
editor/editor_ui/src/tools/: file_dialog.h  imgui_tools.h  imgui_widgets.h
editor/editor_ui/src/ui_menu_options/: renderer_options.h  scene_camera_options.h
editor/editor_ui/tools/: file_dialog.cpp  file_dialog.h  imgui_tools.h  imgui_widgets.h
editor/editor_ui/ui/: dllmain.cpp  ui.cpp  ui.h  ui_module.cpp  ui_module.h  ui_serialization.h
editor/editor_ui/windows/: entity_explorer.h  main_viewport.h  model_explorer.h  project_explorer.h  scene_panel.h  skybox_explorer.h
editor/imgui_controll/: imgui_controll.cpp  imgui_controll.h
editor/imgui_layer/: imgui_layer.cpp  imgui_layer.h
editor/resources/brick_wall/: plane.mtl
editor/resources/shaders/: phong.glsl  phong_discard.glsl  skybox.glsl  solid_color.glsl
editor/sdl_window/: sdl_window.cpp  sdl_window.h
editor/src/: editor_app.cpp
editor/src/UI/: UI.cpp  UI.h  file_dialog.h
editor/src/UI/UI_components/: camera_options.h  (+11 more)
editor/src/draw_tools/: draw_boundingbox.cpp  draw_boundingbox.h  draw_selected_entity.cpp  draw_selected_entity.h
editor/src/editor_layer/: editor_layer.cpp  editor_layer.h
editor/src/file_dialog/: file_dialog.cpp
editor/src/imgui_controll/: imgui_controll.cpp  imgui_controll.h
editor/src/scene_camera/: scene_camera.cpp  scene_camera.h  scene_camera_component.h  scene_camera_controller.cpp  scene_camera_controller.h
editor/src/scripts/: test_script.h
editor/src/sdl_window/: sdl_window.cpp  sdl_window.h
editor/src/serialization/: entity_serialization.cpp  entity_serialization.h  serialization.cpp  serialization.h
editor/src/ui/: imgui_control.cpp  ui.cpp  ui_args.h  ui_module.cpp  ui_module.h
editor/src/user_interface/: user_interface.cpp  user_interface.h
editor/src/viewport/: viewport.cpp  viewport.h  viewport_array.cpp  viewport_array.h
editor/viewport/: viewport.cpp  viewport.h  viewport_array.cpp  viewport_array.h  viewports.cpp  viewports.h
engine/: CMakeLists.txt  engine.h  entry_point.h
engine/application/: application.cpp  application.h
engine/core/: CMakeLists.txt  base.h
engine/core/application/: application.cpp  application.h  input.cpp  input.h  layer.h  window.cpp  window.h  window_ui.cpp  window_ui.h
engine/core/base/: base.h  timer.cpp  timer.h
engine/core/delta_time/: delta_time.cpp  delta_time.h
engine/core/engine/: engine.cpp  engine.h
engine/core/high_level/: scene_camera.h  window_ui.cpp  window_ui.h
engine/core/layers/: layer.cpp  layer.h  layer_array.cpp  layer_array.h
engine/core/lib/: ref.h  str.h  tree.h
engine/core/loader/: default_resources.h  loader.cpp  loader.h  model_loader.cpp  shader_loader.cpp  skybox_loader.cpp  texture_loader.cpp
engine/core/log/: log.cpp  log.h
engine/core/project/: project.cpp  project.h
engine/core/renderer/: renderer.cpp  renderer.h
engine/core/scene/: components.cpp  components.h  entity.h  scene.cpp  scene.h
engine/core/serialization/: entity_serialization.h  loader_serialization.h  project_serialization.h  renderer_serialization.h  serialization.cpp  serialization.h
engine/core/window/: window.h
engine/entt/: CMakeLists.txt  entt.cpp
engine/entt_lib/: CMakeLists.txt
engine/entt_lib/src/: entt_lib.cpp
engine/framebuffer/: framebuffer.cpp  framebuffer.h
engine/include/: bubble.h  bubble_entry_point.h  engine.h  entry_point.h
engine/layers/: layer.cpp  layer.h  layer_array.cpp  layer_array.h
engine/log/: log.cpp  log.h
engine/renderer/buffer/: buffer.cpp  buffer.h
engine/renderer/camera/: camera.cpp  camera.h
engine/renderer/framebuffer/: framebuffer.cpp  framebuffer.h
engine/renderer/gl_assert/: gl_assert.h
engine/renderer/shader/: shader.cpp  shader.h
engine/renderer/vertex_array/: vertex_array.cpp
engine/src/: engine.h  entry_point.h
engine/src/core/: application.cpp  application.h  base.h  input.cpp  input.h  layer.h  log.cpp  log.h  timer.cpp  timer.h  window.cpp  window.h
engine/src/loader/: loader.h  loader_serialization.h  model_loader.cpp  shader_loader.cpp  skybox_loader.cpp  texture_loader.cpp
engine/src/renderer/: camera_free.cpp  camera_target.cpp  camera_target.h  camera_third_person.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  light.h  material.h  mesh.h  model.cpp  model_loader.h  renderer.cpp  renderer.h  renderer_base.h  renderer_scene_state.h  renderer_serialization.h  scene_state.h  shader.h  shader_loader.cpp  shader_loader.h  skybox.cpp  skybox.h  skybox_loader.cpp  skybox_loader.h  texture.cpp
engine/src/scene/: components.h  entity.cpp  entity.h  entity_serialization.cpp  entity_serialization.h  scene.cpp  scene.h
engine/window/: window.h
(+210 files in other folders)
